# ssudam-widget

./: README.md  generate-icon.mjs  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AshEffect.tsx  MemoPanel.tsx  TimerDisplay.tsx
src/components/Cigarette/: Ash.tsx  Cigarette.tsx  Filter.tsx  SmokeParticles.tsx
src/hooks/: useCigarette.ts  useSmokeParticles.ts  useTimer.ts
src/styles/: cigarette.css
src/windows/: MainWidget.tsx  Settings.tsx
