[package]
name = "damta-widget"
version = "1.0.0"
description = "담타 위젯 - 바탕화면 위 작은 흡연실"
authors = ["정진호 <ckato9173@gmail.com>"]
edition = "2021"

[lib]
name = "damta_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
